--- a/frontend/src/Customer/components/navbar.css
+++ b/frontend/src/Customer/components/navbar.css
@@ -40,6 +40,26 @@
 *::after {
   box-sizing: border-box;
 }
+.cart-icon-container {
+  position: relative;
+  display: inline-block;
+}
+
+.notification-dot {
+  position: absolute;
+  top: 25px;
+  right: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 18px;
+  height: 18px;
+  background-color: red;
+  color: #fff;
+  font-size: 12px;
+  font-weight: bold;
+  border-radius: 50%;
+}
 
 html {
   font-family: sans-serif;
