--- a/frontend/src/Customer/components/topbar.css
+++ b/frontend/src/Customer/components/topbar.css
@@ -58,7 +58,20 @@
     -webkit-text-size-adjust: 100%;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   }
-  
+  .user{
+    margin-top: -5px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: -10px;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: #60b1c5;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    size: 20px;
+    font-size: 25px;
+    text-align: center;
+    align-items: center;
+  }
   article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
     display: block;
   }
