--- a/frontend/src/Customer/screen/login.css
+++ b/frontend/src/Customer/screen/login.css
@@ -146,7 +146,7 @@ body {
     color: #FFFFFF;
     cursor: pointer;
     font-family: Inter,Helvetica,"Apple Color Emoji","Segoe UI Emoji",NotoColorEmoji,"Noto Color Emoji","Segoe UI Symbol","Android Emoji",EmojiSymbols,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue","Noto Sans",sans-serif;
-    font-size: 16px;
+    font-size: 20px;
     font-weight: 700;
     line-height: 24px;
     opacity: 1;
@@ -155,6 +155,13 @@ body {
     touch-action: manipulation;
     width: fit-content;
     word-break: break-word;
+
+  }
+  .button-34:hover{
+    background-color: #1904E5;
+    box-shadow: #1904E5 0 10px 20px -10px;
+    color: #FFFFFF;
+    transform: translateY(-2px);
 
   }
   .box-form .right .button-34:active{
