--- a/frontend/src/Customer/screen/payment.css
+++ b/frontend/src/Customer/screen/payment.css
@@ -1,39 +1,56 @@
-.payment-page {
-    max-width: 400px;
+.payment-container {
+    max-width: 100px;
     margin: 0 auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: #fff;
   }
   
-  .payment-form label {
-    display: block;
-    margin-bottom: 10px;
+  .payment-form {
+    display: flex;
+    flex-direction: column;
+    max-width: 600px;
+    margin-left:450px;
+
   }
   
-  .payment-form input,
-  .StripeElement {
+  .form-group {
+    margin-bottom: 20px;
+  }
+  
+  .label {
     display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+  }
+  
+  .card-element-container {
     width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
+    padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
   }
   
-  .payment-form .error {
-    color: red;
-    margin-bottom: 10px;
+  .card-element {
+    width: 100%;
   }
   
-  .payment-form button {
+  .error-message {
+    color: red;
+    margin-top: 10px;
+  }
+  
+  .pay-button {
+    padding: 10px 20px;
     background-color: #007bff;
     color: #fff;
-    padding: 10px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
   }
   
-  .payment-form button:disabled {
-    background-color: #ccc;
-    cursor: not-allowed;
+  .pay-button:hover {
+    background-color: #0056b3;
   }
   
